--- a/community/bolt/src/docs/dev/messaging.asciidoc
+++ b/community/bolt/src/docs/dev/messaging.asciidoc
@@ -76,11 +76,11 @@ This message is always the first message the client sends after <<bolt-handshake
 Sending any message other than `INIT` as the first message to the server will result in a `FAILURE` and the
 server closing the connection.
 
-===== Response
-- `SUCCESS` if initialization has completed successfully
-- `FAILURE` if the request was malformed or if initialization cannot be performed at this time
-
 All parameters in the `INIT` message are required.
+
+.Response
+- `SUCCESS {}` if initialization has completed successfully
+- `FAILURE {"code": ..., "message": ...}` if the request was malformed or if initialization cannot be performed at this time
 
 [source,bolt_message_struct]
 ----
@@ -131,9 +131,9 @@ In the case where a previous result stream has not yet been fully consumed, an a
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single
 `IGNORED` message and take no further action.
 
-===== Response
-- `SUCCESS` if the statement has been accepted for execution
-- `FAILURE` if the request was malformed or if a statement may not be executed at this time
+.Response
+- `SUCCESS {"fields": ...}` if the statement has been accepted for execution
+- `FAILURE {"code": ..., "message": ...}` if the request was malformed or if a statement may not be executed at this time
 
 .Example
 [source,bolt_packstream_type]
@@ -159,9 +159,9 @@ If no result stream is currently active, the server will respond with a single `
 
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single `IGNORED` message and take no further action.
 
-===== Response
-- `SUCCESS` if the result stream has been successfully discarded
-- `FAILURE` if no result stream is currently available
+.Response
+- `SUCCESS {}` if the result stream has been successfully discarded
+- `FAILURE {"code": ..., "message": ...}` if no result stream is currently available
 
 .Example
 [source,bolt_packstream_type]
@@ -188,9 +188,9 @@ If an error is encountered, the server must instead send a `FAILURE` message, di
 
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single `IGNORED` message and take no further action.
 
-===== Response
-- `SUCCESS` if the result stream has been successfully transferred
-- `FAILURE` if no result stream is currently available or if retrieval fails
+.Response
+- `SUCCESS {...}` if the result stream has been successfully transferred
+- `FAILURE {"code": ..., "message": ...}` if no result stream is currently available or if retrieval fails
 
 .Example
 [source,bolt_packstream_type]
@@ -216,9 +216,9 @@ If no such failure state is pending, a FAILURE message will be sent instead.
 
 An `ACK_FAILURE` will never be ignored by the server.
 
-===== Response
-- `SUCCESS` if a failure has been successfully acknowledged
-- `FAILURE` if there is no failure that requires acknowledgement
+.Response
+- `SUCCESS {}` if a failure has been successfully acknowledged
+- `FAILURE {"code": ..., "message": ...}` if there is no outstanding failure that requires acknowledgement
 
 .Example
 [source,bolt_packstream_type]
@@ -252,7 +252,7 @@ B1 71 93 01  02 03
 ==== SUCCESS
 
 The `SUCCESS` message is a server summary message used to signal that a corresponding client message has been received and actioned as intended.
-The message contains a map of arbitrary meta-data, the contents of which depends on the original request.
+The message contains a map of metadata, the contents of which depend on the original request.
 It has the following structure:
 
 [source,bolt_message_struct]
