Add `CALL` to cypher documentation

--- a/manual/cypher/cypher-docs/src/docs/dev/general.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/general.asciidoc
@@ -29,4 +29,8 @@ include::ql/unwind/index.asciidoc[]
 
 include::ql/union/index.asciidoc[]
 
+:leveloffset: 2
+
+include::ql/call/index.asciidoc[]
+
 :leveloffset: 0
