--- a/manual/embedded-examples/src/docs/dev/procedures.asciidoc
+++ b/manual/embedded-examples/src/docs/dev/procedures.asciidoc
@@ -69,11 +69,11 @@ Neo4j comes with a handful of pre-packaged procedures ready to be used:
 
 [options="header", cols="m,m,d"]
 |===
-| Procedure name        | Command to invoke procedure     | What it does
-| ListProcedures        | CALL sys.db.procedures()        | List all procedures in the database.
-| ListLabels            | CALL sys.db.labels()            | List all labels in the database.
-| ListRelationshipTypes | CALL sys.db.relationshipTypes() | List all relationship types in the database.
-| ListPropertyKeys      | CALL sys.db.propertyKeys()      | List all property keys in the database.
+| Procedure name        | Command to invoke procedure | What it does
+| ListProcedures        | CALL db.procedures()        | List all procedures in the database.
+| ListLabels            | CALL db.labels()            | List all labels in the database.
+| ListRelationshipTypes | CALL db.relationshipTypes() | List all relationship types in the database.
+| ListPropertyKeys      | CALL db.propertyKeys()      | List all property keys in the database.
 |===
 
 
